# ya-wiki-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  cmd.txt  pyproject.toml
docs/: yfm-syntax.md
src/ya_wiki_mcp/: __init__.py  client.py  converter.py  prompt_manager.py  server.py  tree.yaml  tree_manager.py
src/ya_wiki_mcp/docs/: mcp.txt  yandex-wiki-api.md
src/ya_wiki_mcp/prompts/: faq-page.md  meeting-notes.md
tests/: test_converter.py
